US7225: Committing Happy path bank login and bank to card toggle.

--- a/Discover-Card-Phone/res/layout/old_general_need_help_footer.xml
+++ b/Discover-Card-Phone/res/layout/old_general_need_help_footer.xml
@@ -25,7 +25,8 @@
 	        style="@style/contact_no_hyperlink"
 	        android:paddingRight="@dimen/content_padding"
 	        android:paddingLeft="@dimen/content_padding"
-	        android:paddingBottom="@dimen/content_padding"/>
+	        android:paddingBottom="4dp"
+	        />
     </RelativeLayout>  
 
 </merge>
