--- a/Discover-Card-Phone/res/layout/register_create_credentials.xml
+++ b/Discover-Card-Phone/res/layout/register_create_credentials.xml
@@ -26,7 +26,9 @@
                 android:id="@+id/account_info_main_error_label"
                 style="@style/error_label"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content" 
+                android:text="@string/account_info_bad_input_error_text"
+                />
 
             <TextView
                 android:id="@+id/account_info_label_one_label"
@@ -34,7 +36,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_error_label_two"
-                android:text="@string/account_info_two_create_id_text" />
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="@string/account_info_two_create_id_text"
+                android:textSize="16dp" />
 
             <TextView
                 android:id="@+id/account_info_error_label"
@@ -53,23 +61,36 @@
 
             <TextView
                 android:id="@+id/account_info_two_id_strength_bar_label"
-                style="@style/field_copy_small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/account_info_two_id_field"
                 android:layout_alignRight="@+id/account_info_two_id_field"
                 android:layout_marginRight="@dimen/table_inner_padding"
-                android:text="@string/strength_text" />
+                android:text="@string/strength_text" 
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
+                />
 
             <TextView
                 android:id="@+id/account_information_input_info_label"
-                style="@style/sub_copy_small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignLeft="@+id/account_info_label_one_label"
                 android:layout_below="@+id/account_info_two_id_field"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:text="@string/account_info_two_id_detail_info_text"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <com.discover.mobile.card.login.register.CredentialStrengthEditText
@@ -77,11 +98,13 @@
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_label_one_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
                 android:inputType="textNoSuggestions"
                 android:maxLines="@integer/MAX_INPUT_LINES"
-                android:textCursorDrawable="@null" />
+                android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/account_info_two_confirm_id_label"
@@ -89,8 +112,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_information_input_info_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/account_info_two_confirm_id_text" />
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="@string/account_info_two_confirm_id_text"
+                android:textSize="16dp" />
 
             <com.discover.mobile.card.common.uiwidget.ConfirmationEditText
                 android:id="@+id/account_info_two_id_confirm_field"
@@ -98,11 +126,13 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_alignLeft="@+id/account_information_input_info_label"
                 android:layout_below="@+id/account_info_two_confirm_id_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
                 android:inputType="textNoSuggestions"
-                android:maxLines="@integer/MAX_INPUT_LINES" 
-                android:textCursorDrawable="@null" />
+                android:maxLines="@integer/MAX_INPUT_LINES"
+                 android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/account_info_id_confirm_error_label"
@@ -119,18 +149,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_id_confirm_error_label"
-                android:layout_marginTop="@dimen/groups_of_elements_padding"
-                android:text="@string/account_info_two_pass_text" />
+                android:text="@string/account_info_two_pass_text" 
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textSize="16dp"
+                />
 
             <TextView
                 android:id="@+id/account_info_two_pass_strength_bar_label"
-                style="@style/field_copy_small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/account_info_two_pass_field"
                 android:layout_alignRight="@+id/account_info_two_pass_field"
                 android:layout_marginRight="@dimen/table_inner_padding"
-                android:text="@string/strength_text" />
+                android:text="@string/strength_text" 
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
+                />
 
             <com.discover.mobile.card.login.register.CredentialStrengthEditText
                 android:id="@+id/account_info_two_pass_field"
@@ -138,18 +182,26 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_alignLeft="@+id/account_information_input_info_label"
                 android:layout_below="@+id/account_info_two_pass_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext"
-                android:textCursorDrawable="@null" />
+                 android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/account_info_two_pass_info_label"
-                style="@style/sub_copy_small"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_field"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:text="@string/account_info_two_pass_info_text"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
             <TextView
@@ -158,8 +210,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_info_label"
-                android:layout_marginTop="@dimen/groups_of_elements_padding"
-                android:text="@string/account_info_two_pass_confirm_text" />
+                android:text="@string/account_info_two_pass_confirm_text" 
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textSize="16dp"
+                />
 
             <com.discover.mobile.card.common.uiwidget.ConfirmationEditText
                 android:id="@+id/account_info_two_pass_confirm_field"
@@ -167,11 +225,13 @@
                 android:layout_height="@dimen/input_field_height"
                 android:layout_alignLeft="@+id/account_info_two_pass_confirm_label"
                 android:layout_below="@+id/account_info_two_pass_confirm_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:background="@drawable/edit_text_default"
                 android:imeOptions="actionNext"
-                android:inputType="textPassword" 
-                android:textCursorDrawable="@null" />
+                android:inputType="textPassword"
+                 android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/account_info_pass_two_confirm_error_label"
@@ -187,19 +247,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_pass_two_confirm_error_label"
-                android:layout_marginTop="@dimen/groups_of_elements_padding"
-                android:text="@string/account_info_two_email_text" />
+                android:text="@string/account_info_two_email_text" 
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textSize="16dp"
+                />
 
             <com.discover.mobile.card.common.uiwidget.EmailEditText
                 android:id="@+id/account_info_two_email_field"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_two_email_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:background="@drawable/edit_text_default"
                 android:imeOptions="actionDone"
-                android:inputType="textEmailAddress" 
-                android:textCursorDrawable="@null" />
+                android:inputType="textEmailAddress"
+                 android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"  />
 
             <TextView
                 android:id="@+id/account_info_email_error_label"
@@ -215,19 +283,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_email_error_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/email_sub_copy" />
+                android:text="@string/email_sub_copy" 
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
+                />
 
             <TextView
                 android:id="@+id/account_info_two_cancel_label"
+                style="@style/blue_hyperlink"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_submit_button"
                 android:layout_centerHorizontal="true"
                 android:clickable="true"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:layout_marginBottom="44dp"
                 android:onClick="cancel"
-                android:text="@string/cancel_text"
-                style="@style/blue_hyperlink"/>
+                android:text="@string/cancel_text" 
+                android:textSize="17dp"
+                />
 
             <Button
                 android:id="@+id/account_info_two_submit_button"
@@ -236,8 +317,8 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_email_info_label"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
+                android:layout_marginBottom="14dp"
+                android:layout_marginTop="36dp"
                 android:onClick="checkInputsThenSubmit"
                 android:text="@string/submit_text" />
 
@@ -246,7 +327,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_cancel_label"
-                android:layout_marginTop="@dimen/orange_button_margin_top" >
+             >
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
@@ -258,9 +339,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/footer"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:text="@string/feedback_text" />
+                android:layout_marginTop="38dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="@string/feedback_text" 
+                android:textSize="14dp"
+                />
         </RelativeLayout>
     </ScrollView>
 
