--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -50,16 +50,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_error_label"
-                android:text="@string/forgot_pass_create_new_text" />
+                android:text="@string/forgot_pass_create_new_text" 
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textSize="16dp"
+                />
 
             <com.discover.mobile.card.login.register.CredentialStrengthEditText
                 android:id="@+id/account_info_two_pass_field"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/forgot_pass_two_pass_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionNext" 
-                android:textCursorDrawable="@null"/>
+                android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/enter_new_pass_error_one_label"
@@ -75,17 +84,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/enter_new_pass_error_one_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/account_info_two_pass_info_text" />
+                android:text="@string/account_info_two_pass_info_text" 
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
+                />
 
             <TextView
                 android:id="@+id/account_info_two_pass_strength_label"
-                style="@style/small_copy"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/account_info_two_pass_field"
                 android:layout_alignRight="@+id/account_info_two_pass_field"
-                android:text="@string/strength_text" />
+                android:text="@string/strength_text" 
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="2dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textColor="@color/sub_copy"
+                android:textSize="14dp"
+                android:textStyle="normal"
+                />
 
             <TextView
                 android:id="@+id/account_info_two_pass_confirm_label"
@@ -93,18 +117,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_info_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:text="@string/account_info_two_new_pass_confirm_text" />
+                android:text="@string/account_info_two_new_pass_confirm_text" 
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="8dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:textSize="16dp"
+                />
 
             <com.discover.mobile.card.common.uiwidget.ConfirmationEditText
                 android:id="@+id/account_info_two_pass_confirm_field"
                 android:layout_width="fill_parent"
                 android:layout_height="@dimen/input_field_height"
                 android:layout_below="@+id/account_info_two_pass_confirm_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
                 android:imeOptions="actionDone"
                 android:inputType="textPassword" 
-                android:textCursorDrawable="@null"/>
+                android:textColor="#8a9499"
+                android:textCursorDrawable="@null"
+                android:textSize="14dp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/enter_new_pass_error_two_label"
@@ -112,19 +144,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_pass_confirm_field"
-                android:text="@string/account_info_two_passwords_dont_match_text" />
-
-            <Button
-                android:id="@+id/account_info_two_submit_button"
-                style="@style/call_to_action_theme"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/account_info_two_pass_confirm_field"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:onClick="checkInputsThenSubmit"
-                android:text="@string/submit_text" />
+                android:text="@string/account_info_two_passwords_dont_match_text" 
+                />
 
             <TextView
                 android:id="@+id/account_info_two_cancel_label"
@@ -134,20 +155,36 @@
                 android:layout_below="@+id/account_info_two_submit_button"
                 android:layout_centerHorizontal="true"
                 android:clickable="true"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:layout_marginBottom="44dp"
                 android:onClick="cancel"
-                android:padding="8dp"
-                android:text="@string/cancel_text" />
+                android:text="@string/cancel_text" 
+                android:textSize="17dp"
+                />
+
+            <Button
+                android:id="@+id/account_info_two_submit_button"
+                style="@style/call_to_action_theme"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/account_info_two_pass_confirm_field"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="14dp"
+                android:layout_marginTop="36dp"
+                android:onClick="checkInputsThenSubmit"
+                android:text="@string/submit_text" />
 
             <RelativeLayout
                 android:id="@+id/footer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/account_info_two_cancel_label"
-                android:layout_marginTop="@dimen/between_related_elements_padding"
-                android:layout_centerHorizontal="true" >
+             >
 
                 <include layout="@layout/old_general_need_help_footer" />
             </RelativeLayout>
+
             <TextView
                 android:id="@+id/provide_feedback_button"
                 style="@style/blue_hyperlink_small"
@@ -155,9 +192,13 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/footer"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="@dimen/orange_button_margin_top"
-                android:layout_marginTop="@dimen/orange_button_margin_top"
-                android:text="@string/feedback_text" />
+                android:layout_marginTop="38dp"
+                android:includeFontPadding="false"
+                android:paddingBottom="4dp"
+                android:paddingTop="4dp"
+                android:text="@string/feedback_text" 
+                 android:textSize="14dp"
+                />
         </RelativeLayout>
     </ScrollView>
 
