--- a/Discover-Card-Phone/res/layout/register_help_strength_item.xml
+++ b/Discover-Card-Phone/res/layout/register_help_strength_item.xml
@@ -7,8 +7,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginTop="4dp"
+        android:includeFontPadding="false"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="4dp"
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
         android:text="@string/account_info_help_level1"
+        android:textStyle="bold"
+        android:textSize="16dp"
+        android:textColor="#3d484d"
         style="@style/strength_help_level_message"/>
 
     <View
@@ -35,9 +42,11 @@
         android:id="@+id/reg_help_strength_action"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:includeFontPadding="false"
         android:layout_alignParentLeft="true"
         android:layout_below="@id/reg_help_strength_level"
-        android:layout_marginTop="4dp"
+     	android:paddingTop="4dp"
+     	android:paddingBottom="4dp"
         android:text="@string/account_info_help_action1"
         style="@style/action_message" />
 
@@ -45,9 +54,16 @@
         android:id="@+id/reg_help_strength_msg"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:includeFontPadding="false"
         android:layout_alignParentLeft="true"
+        android:paddingBottom="4dp"
+        android:layout_marginBottom="12dp"
         android:layout_below="@id/reg_help_strength_action"
         android:text="@string/account_info_help_msg1"
-        style="@style/small_copy" />
+        android:textStyle="normal"
+        android:textSize="14dp"
+        android:textColor="#576166"
+        
+ />
 
 </RelativeLayout>
