--- a/Discover-Card-Phone/res/values/error_code_mapping.xml
+++ b/Discover-Card-Phone/res/values/error_code_mapping.xml
@@ -23,6 +23,7 @@
     <string name="E_4031102_SSO_DELINK">Due to special conditions related to your credit card account, we cannot provide you with access to your account information at this time.To recover your User ID, you will need to re-register for online account access at DiscoverBank.com.</string>
     <string name="E_4031102_SSO_DELINK_BUTTON">true.</string>
     <string name="E_4031102_SSO">Due to special conditions related to your credit card account, we can\'t provide you with access to your account information at this time.Because of increased security measures, you will need to log into Discover Bank in order to access your online account.</string>
+    <string name="E_4031102_SSO_AccountNo">Can not Login with Account Number.</string>
     <string name="E_40311021">SSN NOT MATCHED !!</string>
     <string name="E_4031102_SSO_BUTTON">true.</string>
     <string name="E_1601">Promotion code is required.</string>
@@ -286,7 +287,40 @@
     <string name="E_1008">We will be performing a system maintenance between 1 a.m. and 6 a.m. Eastern Time. We apologize for any inconvenience. Please try again later, or for immediate assistance call 18777427822</string>
     <string name="E_1916">You have entered invalid information.Carefully review your information and please try again.</string>
     
-   
+       <!-- Registration Code title -->
+    <string name="E_T_1905">We\'re Sorry</string>
+    <string name="E_T_1907">Your Request Could Not Be Completed</string>
+    <string name="E_T_1908">Your Request Could Not Be Completed</string>
+    <string name="E_T_1910">Secure Credit Card Log In</string>
+    <string name="E_T_1911">Your Request Could Not Be Completed</string>
+    <string name="E_T_1912">Your Request Could Not Be Completed</string>
+    <string name="E_T_1913">Your Request Could Not Be Completed</string>
+    <string name="E_T_1914">Contact Customer Service</string>
+    <string name="E_T_1915">We\'re Sorry</string>
+    <string name="E_T_1922">Secure Credit Card Log In</string>
+    
+    <!-- Registration code Messages -->
+    <string name="E_1901">Invalid user input</string>
+    <string name="E_1902">User IDs do not match.</string>
+    <string name="E_1903">Passwords do not match.</string>
+    <string name="E_1904">Email is required and must be a valid address.</string>
+    <string name="E_1906">You have entered invalid information.  Carefully review your information and please try again.</string>
+    <string name="E_1907">There was a problem authenticating your registration information.</string>
+    <string name="E_1908">The information you entered was not valid.If you feel that you have received this message in error return to the Forgot Your Password page , and enter your information again.</string>
+    <string name="E_1909">Problem retrieving account information</string>
+    <string name="E_1910">You Have Exceeded the Maximum Number of Unsuccessful Attempts. Please contact Customer Service at 18777427822 for assistance.</string>
+    <string name="E_1914">At this time, only the primary cardholder can register for and access Account Center.  For more assistance, please contact Customer Service at 18777427822.</string>
+    <string name="E_1915">Your request cannot be completed because the rewards application is currently under maintenance.We apologize for the inconvenience. Please try again later or contact Customer Service at 18003472683.</string>
+    <string name="E_1917">You have one more log in attempt today. For security purposes, we limit the number of attempts to enter your information. If you think you are receiving this message in error, call 18777427822.</string>
+    <string name="E_1918">Your Request Could Not Be Completed. The information entered was not valid. If you feel that you have received this message in error, return to the Forgot User ID/Password page and try again.</string>
+    <string name="E_1919">User ID and password must not be the same.</string>
+    <string name="E_1920">User ID must not look like your Social Security number. Please choose another one.</string>
+    <string name="E_1921">User ID is already in use. Please choose another one.</string>
+    <string name="E_1922">Your Discover Card Account Number has changed. In order to access your account through the mobile channel, you must first log in to the Account Center at www.discover.com. For more information, please contact Customer Service at 18777427822.</string>
+    <string name="E_1923">The User ID is empty. Please enter a User ID.</string>
+    <string name="E_1924">The User ID is invalid. Please enter a valid User ID.</string>
+    <string name="E_1925">The password is empty. Please enter a password.</string>
+    <string name="E_1926">The password is invalid. Please enter a valid password.</string>
     
     
 <!-- need help footer and feedback -->
