--- a/Discover-Card-Phone/res/values/strings_account_info.xml
+++ b/Discover-Card-Phone/res/values/strings_account_info.xml
@@ -22,7 +22,7 @@
 	</string>
 	
 	<string name="email_sub_copy">
-	    You\'ll be sent an email confirming your online account registration.
+	    You’ll be sent an email confirming your online account registration. This e-mail address will be added to your Discover card profile. 
 	</string>
 	
 	<string name="account_info_two_confirm_id_text">Confirm User ID</string>
