--- a/Discover-Card-Phone/res/values/strings_confirmation.xml
+++ b/Discover-Card-Phone/res/values/strings_confirmation.xml
@@ -57,4 +57,8 @@
 	
 <!-- Forgot ID Confirmation Strings -->
 <string name="forgot_id_confirmation_title_text">You Are Now Logged In</string>
+
+<string name="second_paragraph_information">
+	    Your discover.com account password has also been changed.
+	</string>
 </resources>
